test/errors/controller.ts
export enum LiqtrollerErrors {
  OnlyAdmin = 'LiqtrollerStorage: onlyAdmin'
}
